force-app/main/default/objects/Contact/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gone Away</fullName>
            </value>
            <value>
                <fullName>Returned to Sender</fullName>
            </value>
            <value>
                <fullName>MPS Suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>