force-app/main/default/objects/Contact/fields/Affinity__c.field-meta.xml
<CustomField>
    <fullName>Affinity__c</fullName>
    <label>Affinity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affinity</valueSetName>
    </valueSet>
</CustomField>