force-app/main/default/objects/Contact/fields/Child_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Set_Date__c</fullName>
    <label>Child Set Date</label>
    <type>Date</type>
</CustomField>