force-app/main/default/objects/Contact/fields/Data_Screened__c.field-meta.xml
<CustomField>
    <fullName>Data_Screened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact has been data screened</description>
    <label>Data Screened</label>
    <type>Checkbox</type>
</CustomField>