force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To capture when a Person Account should not be contacted - all Consent will be updated to &apos;Opt Out&apos; too.</description>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>