force-app/main/default/objects/Contact/fields/Do_Not_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Reason__c</fullName>
    <label>Do Not Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supporter Is Deceased</fullName>
            </value>
            <value>
                <fullName>Supporter Request</fullName>
            </value>
            <value>
                <fullName>FareShare Suppressed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>