force-app/main/default/objects/Contact/fields/gaid__Active_Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>gaid__Active_Gift_Aid_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Gift Aid Declaration (depr.)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>gaid__Gift_Aid_Declaration__c.gaid__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>gaid__Gift_Aid_Declaration__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>