force-app/main/default/objects/Contact/fields/gaid__Active_Gift_Aid_Declarations__c.field-meta.xml
<CustomField>
    <fullName>gaid__Active_Gift_Aid_Declarations__c</fullName>
    <label>Active Gift Aid Declarations (depr.)</label>
    <summaryFilterItems>
        <field>gaid__Gift_Aid_Declaration__c.gaid__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>gaid__Gift_Aid_Declaration__c.gaid__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>