force-app/main/default/objects/Contact/fields/gaid__Has_Valid_GAD_Now__c.field-meta.xml
<CustomField>
    <fullName>gaid__Has_Valid_GAD_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Valid GAD Now</label>
    <type>Checkbox</type>
</CustomField>