force-app/main/default/objects/Contact/fields/gcf__GoCardless_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>gcf__GoCardless_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>GoCardless Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>