force-app/main/default/objects/Contact/fields/gcf__Personnummer__c.field-meta.xml
<CustomField>
    <fullName>gcf__Personnummer__c</fullName>
    <externalId>true</externalId>
    <label>Personnummer</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>