force-app/main/default/objects/Contact/fields/Last_Regional_Centre_RC_volunteer_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Regional_Centre_RC_volunteer_date__c</fullName>
    <inlineHelpText>This information is only collected for RC volunteers. For TFC volunteers this value will always be null.</inlineHelpText>
    <label>Last Regional Centre (RC) volunteer date</label>
    <type>Date</type>
</CustomField>