force-app/main/default/objects/Contact/fields/NPSP_Account_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>NPSP_Account_Salesforce_Id__c</fullName>
    <label>NPSP Account Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>