force-app/main/default/objects/Contact/fields/NPSP_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>NPSP_Salesforce_Id__c</fullName>
    <externalId>true</externalId>
    <label>NPSP Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>