force-app/main/default/objects/Contact/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <description>Objectives and planning</description>
    <label>Objectives</label>
    <type>TextArea</type>
</CustomField>