force-app/main/default/objects/Contact/fields/Perceived_Vulnerable__c.field-meta.xml
<CustomField>
    <fullName>Perceived_Vulnerable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to flag if a Donor is perceived as vulnerable.</description>
    <label>Perceived Vulnerable</label>
    <type>Checkbox</type>
</CustomField>