force-app/main/default/objects/Contact/fields/phstr__Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>phstr__Stripe_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>