force-app/main/default/objects/Contact/fields/Proximity__c.field-meta.xml
<CustomField>
    <fullName>Proximity__c</fullName>
    <label>Proximity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proximity</valueSetName>
    </valueSet>
</CustomField>