force-app/main/default/objects/Contact/fields/Regional_Centre_volunteer__c.field-meta.xml
<CustomField>
    <fullName>Regional_Centre_volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Centre volunteer</label>
    <type>Checkbox</type>
</CustomField>