force-app/main/default/objects/Contact/fields/Stewardship_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies an individual as part of a stewardship relationship</description>
    <label>Stewardship Relationship</label>
    <type>Checkbox</type>
</CustomField>