force-app/main/default/objects/Contact/fields/Tesco_Food_Collection_volunteer__c.field-meta.xml
<CustomField>
    <fullName>Tesco_Food_Collection_volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tesco Food Collection volunteer</label>
    <type>Checkbox</type>
</CustomField>