force-app/main/default/objects/Contact/fields/Unable_To_Migrate__c.field-meta.xml
<CustomField>
    <fullName>Unable_To_Migrate__c</fullName>
    <description>Data Migration</description>
    <label>Unable_To_Migrate__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>